Flicker and fade in/out changes, play button for audio and a fix for mobile video

--- a/styles.css
+++ b/styles.css
@@ -74,22 +74,38 @@ video {
 
 
 @keyframes flicker {
-    0%, 100% {
-        opacity: 0.9;
+    0%, 10%, 20%, 30%, 40%, 50%, 60%, 70%, 80%, 90%, 100% {
+        opacity: 0; /* Start with no opacity */
     }
-    10%, 30%, 50%, 70%, 90% {
-        opacity: 0.1;
-    }
-    20%, 40%, 60%, 80% {
-        opacity: 0.8;
+    5%, 15%, 25%, 35%, 45%, 55%, 65%, 75%, 85%, 95% {
+        opacity: 1; /* Quick flickers */
     }
 }
 
-#diagram-overlay img {
+
+@keyframes fadeInOut {
+    0%, 100% {
+        opacity: 0; /* Start and end with no opacity */
+    }
+    50% {
+        opacity: 1; /* Fully visible at the midpoint */
+    }
+}
+
+
+#diagram-img {
     max-width: 100%;
     max-height: 100vh;
     position: absolute;
-    animation: flicker 2s infinite; /* Adjust the duration as needed */
+    animation: flicker 7s steps(1, start) infinite; /* Adjust duration as needed */
     transform: scale(0.4); /* Scale the image to 50% */
 }
 
+#bottom-right-image {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100px; /* Adjust width as needed */
+    height: auto; /* Automatically adjust height */
+    z-index: 9999; /* Ensure the image stays on top of other content */
+}
